--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.16",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@types/jquery": "^3.3.22",
     "bootstrap": "^4.1.3",
     "cordova-android": "7.1.4",
